--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <maven>3.0.1</maven>
     </prerequisites>
 
-    <groupId>io.dropwizard.metrics</groupId>
+    <groupId>com.sinnerschrader.metrics</groupId>
     <artifactId>metrics-parent</artifactId>
     <version>3.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -80,9 +80,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git://github.com/dropwizard/metrics.git</connection>
-        <developerConnection>scm:git:git@github.com:dropwizard/metrics.git</developerConnection>
-        <url>http://github.com/dropwizard/metrics/</url>
+        <connection>scm:git:git://github.com/sinnerschrader/metrics.git</connection>
+        <developerConnection>scm:git:git@github.com:sinnerschrader/metrics.git</developerConnection>
+        <url>http://github.com/sinnerschrader/metrics/</url>
         <tag>HEAD</tag>
     </scm>
 
