--- a/metrics-benchmarks/pom.xml
+++ b/metrics-benchmarks/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.sinnerschrader.metrics</groupId>
         <artifactId>metrics-parent</artifactId>
-        <version>3.2.0.0</version>
+        <version>3.2.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>metrics-benchmarks</artifactId>
