--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.sinnerschrader.metrics</groupId>
     <artifactId>metrics-parent</artifactId>
-    <version>3.2.0.0</version>
+    <version>3.2.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Metrics Parent</name>
     <description>
@@ -83,7 +83,7 @@
         <connection>scm:git:git://github.com/sinnerschrader/metrics.git</connection>
         <developerConnection>scm:git:git@github.com:sinnerschrader/metrics.git</developerConnection>
         <url>http://github.com/sinnerschrader/metrics/</url>
-        <tag>v3.2.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
